[package]
name = "debox-open-sdk"
version = "0.3.0"
edition = "2021"
description = "the programming interface of Debox social chat service (Chat Service) API"
keywords = ["Debox", "SDK", "ChatService"]
categories = ["debox-open-api-example"]
repository = "https://github.com/DeBoxLove/debox-open-rust"
documentation = "https://docs.rs/debox-open-api"
authors = ["eng-cc"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
